--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
@@ -27,6 +28,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.1.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-icon": "^0.6.8",
     "shadcn-nuxt": "^0.9.0",
