--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.331.0",
