--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@tanstack/vue-table": "^8.13.2",
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
